cmd/style.css
@font-face {
  font-family: 'Grandstander';
  src: url('/resources/Grandstander-VariableFont_wght.ttf');
}

:root {
  outline: none;
  user-select: none;

  overflow-x: hidden;
}

body {
  margin: 0;
  display: flex;
  background-color: black;
  color: white;
}

#background {
  position: absolute;
  width: 100%;
  height: 100%;

  display: flex;

  align-items: center;
  justify-content: center;
}

#blob-container-text {
  position: absolute;

  left: 22rem;
  top: 17rem;
}

.blob {
  width: 100px;
  height: 100px;

  border-radius: 10rem;

  animation: blob 10s infinite ease-in-out;
  transition: all 1s ease-in-out;
}

.blob-1 {
  background: red;
  animation-duration: 10s;
}

.blob-2 {
  background: green;
  animation-duration: 5s;
}

.blob-3 {
  background: blue;
  animation-duration: 6s;
}

@keyframes blob {
  0% {
    transform: translateX(-100%) translateY(0%);
  }
  25% {
    transform: translateX(0%) translateY(100%);
  }
  50% {
    transform: translateX(100%) translateY(0%);
  }
  75% {
    transform: translateX(0%) translateY(-100%);
  }
  100% {
    transform: translateX(-100%) translateY(0%);
  }
}

#console {
  backdrop-filter: blur(100px);
  /* brightness(10) brightness(0.1) */

  width: 100%;
  min-height: calc(100vh - 10rem);
  padding: 5rem;
  font-size: 1rem;
  font-family: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
}

h1 {
  font-family: 'Grandstander';
}

@media screen and (min-width: 1000px) {
  #console {
    font-size: 2rem;
  }
}

#console div {
  margin-bottom: 2rem;
}

nav a,
#back {
  color: #fff;
  text-decoration: none;
}

#back:hover {
  color: #b9b9b9;
}

nav a::before {
  content: '[';
}

nav a::after {
  content: ']';
}

nav a:focus {
  text-decoration: none;
  background-color: #da532c;
  outline: none;
}

nav a:hover {
  text-decoration: none;
  background-color: #1b47c0;
  outline: none;
}

*::selection {
  color: black;
  background-color: white;
}

